using GymApis.Models.Membership;

namespace GymApis.Models.Members;

/// <summary>
/// Maps onto `memberships` — one row per plan purchase. Renewals are new rows,
/// never an edit of the old one, so a receipt can always be reproduced.
///
/// Two schema facts drive the whole service around this entity:
///
///  * <see cref="TotalAmount"/> is a STORED GENERATED column
///    (plan_price - discount_amount). EF must read it and never write it; the
///    mapping in GymDbContext marks it accordingly. Setting it fails the INSERT.
///  * `idx_one_active_membership` is a partial UNIQUE on member_id WHERE
///    status = 'active'. A renewal must close the current row before inserting
///    the next one — the same close-before-insert rule as staff shifts.
///
/// <see cref="PlanPrice"/> is a snapshot, not a lookup: the plan's price may
/// change later and old receipts must not move with it.
/// </summary>
public class Membership
{
    public long Id { get; set; }
    public long TenantId { get; set; }
    public long BranchId { get; set; }
    public long MemberId { get; set; }
    public long PlanId { get; set; }

    public DateOnly StartDate { get; set; }

    /// <summary>start_date + plan_interval(duration) - 1 day, unless overridden.</summary>
    public DateOnly EndDate { get; set; }

    /// <summary>Price snapshot taken from the plan at purchase time.</summary>
    public decimal PlanPrice { get; set; }

    public decimal DiscountAmount { get; set; }

    /// <summary>Generated by Postgres. Read-only — never assign to this.</summary>
    public decimal TotalAmount { get; private set; }

    /// <summary>active | expired | cancelled | frozen | upcoming (DB CHECK).</summary>
    public string Status { get; set; } = "active";

    public long? AssignedTrainerId { get; set; }
    public long? CreatedByUserId { get; set; }

    public DateTimeOffset? CancelledAt { get; set; }
    public string? CancellationReason { get; set; }

    public DateTimeOffset CreatedAt { get; set; }
    public DateTimeOffset UpdatedAt { get; set; }

    public MembershipPlan Plan { get; set; } = default!;
}
